CSS/styles.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/*-------End CSS Reset-------*/

.blueOverlay {
    background-color: rgba( 36, 48, 64, .75);
    z-index: 1;
}

/*---------------------------------------General Body Styling---------------------------*/

body{
    color: rgba( 36, 48, 64, 1);
    font-family: 'Open Sans', sans-serif;
    font-size: 16px;
}

h1 {
    font-size: 2em;
}

h2 {
    font-size: 1.75em;
}

h3 {
    font-size: 1.5em;
}
h4 {
    font-size: 1.25em;
}
h5 {
    font-size: 1.125em;
}

/*---------------------------------------Header Styling---------------------------*/
header {
    padding: 1.5em;
    background-color: white;
}

.headerLogo {
    font-weight: 800;
}

.lastName {
    font-weight: 300;
}

.headerLogo a {
    text-decoration: none;
    color: rgba( 36, 48, 64, 1);
}

@media (max-width: 540px) {
    header {
        padding: .75em;
    }
    .headerLogo {
        font-size: 75%;
    }
}

/*---------------------------------------Nav Styling---------------------------*/

nav a {
    text-decoration: none;
    color: rgba(170, 202, 59, 1);
    display: inline-block;
    padding: .5em;
}

nav ul li {
    display: inline-block;
    padding-left: 5em;
}

nav a:hover {
    color: rgba(170, 202, 59, 1);
    text-decoration: none;
    border-left: 2px solid rgba( 36, 48, 64, 1);
    transition: all ease-in-out 200ms;
}

/*-----------------------------------------------Media Queries for Nav-----------------*/

 @media (max-width: 850px){
     nav ul li{
         padding-left: 0;
     }
 }

/*-----------------------------------Hero Styling----------------------------*/

.hero {
    background: url("../images/heroImg.jpg");
    height: 650px;
    background-size: cover;
    background-position: center;
    padding: 0;
}

.heroPad {
    background-color: rgba( 36, 48, 64, .75);
    height: inherit;
}

.heroTag {
    padding-top: 1em;
    color: white;
    font-weight: 800;
    font-size: 7em;
    letter-spacing: .112em;
    line-height: .72em;
}

.ampersand {
    color: rgba(170, 202, 59, 1);
    font-size: 125%;
}

.devTag {
    letter-spacing: .222em;
}

.hero p {
    padding-top: 8em;
    letter-spacing: .75em;
    color: white;
}

/*-----------------------------------------------Media Queries for Hero Image-----------------*/


@media (max-width: 992px) {
    .hero {
        height: 450px;
    }

    .heroTag {
        font-size: 5em;
    }

    .hero P {
        padding-top: 5em;
        letter-spacing: .40em;
    }
}

 @media (max-width: 768px){
     .hero{
         height: 300px;
     }

     .heroTag {
         font-size: 3em;
     }

     .hero p {
         padding-top: 4em;
         letter-spacing: .120em;
     }
 }

 @media (max-width: 540px) {
     .heroTag {
         font-size: 1.75em;
     }
     .hero p {
         font-size: 12px;
     }
     .hero {
         height: 200px;
     }
 }


 /*---------------------------------Who is Drew Styling-------------------------------------*/


 .aboutMe {
     padding: 6em 0;
 }

 .aboutMe h1 {
     font-weight: 800;
     padding-bottom: .5em;
     font-size: 3em;
 }

 .aboutMe p {
     font-weight: 400;
     font-size: 1.5em;
     line-height: 1.25em;
     padding-bottom: 2em;
     text-align: justify;
 }

 .aboutMe h2 {
     font-weight: 700;
     font-size: 2em;
 }

 .aboutMe span {
     color: rgba(170, 202, 59, 1);
 }


 /*---------------------------Media Queries for About Me--------------------------------------*/

 @media (max-width: 992px) {
    .aboutMe {
        padding: 4em 0;
    }

    .aboutMe h1 {
        font-size: 2em;
    }

    .aboutMe p {
        font-size: 1em;
        padding-bottom: 1.5em;
    }

    .aboutMe h2{
        font-size: 1.5em;
    }
}

/*--------------------blog tease---------------------------*/
.blogTease {
    height: 400px;
}

/*-------------------------------Lower Image and Available styling -----------------------*/

.avail{
    background-color: rgba(170, 202, 59, 1);
    color: white;
    font-size: 3em;
    font-weight: 800;
    height: inherit;
    float: right;
    padding: 1em .5em;
}

.excite {
    background: url('../images/lowerHomeImg.jpg') no-repeat;
    display: inline-block;
    width: 100%;
    overflow: hidden;
    background-size: 60%;
    background-position-y: 25%;
}

.avail span{
    color: rgba( 36, 48, 64, 1);
}

/*-------------------------media queries for lower home image--------------------------*/

@media (min-width: 768px) {
    .avail {
        text-align: left;
    }
    .excite {
        background-size: 80%;
        background-position-x: -100%;
    }
}

@media (min-width: 960px) {
    .excite {
        background-size: 60%;
        background-position-y: 25%;
        background-position-x: 0;
    }
}

@media (min-width: 1220px) {
    .avail {
        font-size: 4em;
        padding: .5em;
    }
}

@media (min-width: 1440px) {
    .excite {
        background-position-x: 0;
    }
}

/*---------------------------------footer starts here------------------------------*/

 footer {
     padding: 2em;
     background-color: rgba( 215,215, 215, 1);
     overflow: hidden;
 }

 .footerAnchor{     
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;
 }

 footer ul {
     padding: 1em;
     font-weight: 400;
 }

 footer ul li{
     display: inline-block;
 }

 footer a {
     color: rgba( 36, 48, 64, 1);
 }

 footer a:hover {
     text-decoration: none;
 }

 footer p {
     font-weight: 700;
     font-size: 1.25em;
     padding-top: .5em;
     padding-bottom: 2em;
 }


 /*--------------------------------------------Contact Form Style------------------------*/

 .contactForm {
     font-weight: 700;
     padding: 2em 5%;
 }

.contactForm h1 {
    font-size: 3em;
    padding-bottom: .25em;
}

.contactForm p {
    padding-bottom: 2em;
}

.formElement {
    padding: 1em 0;
    width: 100%;
}

.formElement label {
    padding-bottom: .5em;
}

.formInput {
    width: 100%;
}

.formInput comment {
    height: 300px;
}

form {
    padding-bottom: 2em;
}

.formSubmit {
     padding: 1em;
     box-shadow: 0;
     border: 0;
     color: white;
     background-color: rgba( 36, 48, 64, .75);
     border-radius: 5px;
     transition: .25s;
 }

 .formSubmit:hover {
     background-color: rgba( 36, 48, 64, 1);
 }

